@@ -5,12 +5,12 @@
     <parent>
         <groupId>io.airlift</groupId>
         <artifactId>airbase</artifactId>
-        <version>110</version>
+        <version>112</version>
     </parent>
 
     <groupId>io.trino</groupId>
     <artifactId>trino-root</artifactId>
-    <version>360-SNAPSHOT</version>
+    <version>366-SNAPSHOT</version>
 
     <name>trino-root</name>
     <description>Trino</description>
@@ -48,22 +48,28 @@
 
         <dep.accumulo.version>1.7.4</dep.accumulo.version>
         <dep.accumulo-hadoop.version>2.7.7-1</dep.accumulo-hadoop.version>
-        <dep.antlr.version>4.9</dep.antlr.version>
-        <dep.airlift.version>207</dep.airlift.version>
+        <dep.antlr.version>4.9.2</dep.antlr.version>
+        <dep.airlift.version>209</dep.airlift.version>
         <dep.packaging.version>${dep.airlift.version}</dep.packaging.version>
-        <dep.aws-sdk.version>1.11.946</dep.aws-sdk.version>
+        <dep.aws-sdk.version>1.12.85</dep.aws-sdk.version>
         <dep.okhttp.version>3.14.9</dep.okhttp.version>
+        <dep.jsonwebtoken.version>0.11.2</dep.jsonwebtoken.version>
         <dep.oracle.version>19.3.0.0</dep.oracle.version>
         <dep.drift.version>1.14</dep.drift.version>
         <dep.scribejava.version>6.9.0</dep.scribejava.version>
         <dep.selenium.version>3.141.59</dep.selenium.version>
-        <dep.tempto.version>185</dep.tempto.version>
+        <dep.tempto.version>186</dep.tempto.version>
         <dep.gcs.version>2.0.0</dep.gcs.version>
-        <dep.errorprone.version>2.7.1</dep.errorprone.version>
-        <dep.testcontainers.version>1.15.3</dep.testcontainers.version>
-        <dep.docker-java.version>3.2.8</dep.docker-java.version>
-        <dep.coral.version>1.0.60</dep.coral.version>
+        <dep.errorprone.version>2.10.0</dep.errorprone.version>
+        <dep.testcontainers.version>1.16.2</dep.testcontainers.version>
+        <dep.docker-java.version>3.2.12</dep.docker-java.version>
+        <dep.coral.version>1.0.121</dep.coral.version>
         <dep.confluent.version>5.5.2</dep.confluent.version>
+
+        <!-- TODO(https://github.com/airlift/airbase/pull/281): Required by testcontainers, remove when pulled from Airbase -->
+        <dep.slf4j.version>1.7.32</dep.slf4j.version>
+
+        <dep.docker.images.version>53</dep.docker.images.version>
 
         <!--
           America/Bahia_Banderas has:
@@ -116,6 +122,7 @@
         <module>plugin/trino-google-sheets</module>
         <module>plugin/trino-hive</module>
         <module>plugin/trino-hive-hadoop2</module>
+        <module>plugin/trino-http-event-listener</module>
         <module>plugin/trino-iceberg</module>
         <module>plugin/trino-jmx</module>
         <module>plugin/trino-kafka</module>
@@ -149,7 +156,6 @@
         <module>service/trino-proxy</module>
         <module>service/trino-verifier</module>
         <module>testing/trino-benchmark</module>
-        <module>testing/trino-benchmark-driver</module>
         <module>testing/trino-benchto-benchmarks</module>
         <module>testing/trino-product-tests</module>
         <module>testing/trino-product-tests-launcher</module>
@@ -530,6 +536,12 @@
 
             <!-- Trino external -->
             <dependency>
+                <groupId>io.trino.benchto</groupId>
+                <artifactId>benchto-driver</artifactId>
+                <version>0.16</version>
+            </dependency>
+
+            <dependency>
                 <groupId>io.trino.cassandra</groupId>
                 <artifactId>cassandra-driver</artifactId>
                 <version>3.1.4-3</version>
@@ -538,13 +550,13 @@
             <dependency>
                 <groupId>io.trino.hadoop</groupId>
                 <artifactId>hadoop-apache</artifactId>
-                <version>3.2.0-12</version>
+                <version>3.2.0-16</version>
             </dependency>
 
             <dependency>
                 <groupId>io.trino.hive</groupId>
                 <artifactId>hive-apache</artifactId>
-                <version>3.1.2-13</version>
+                <version>3.1.2-17</version>
             </dependency>
 
             <dependency>
@@ -631,7 +643,7 @@
             <dependency>
                 <groupId>io.airlift</groupId>
                 <artifactId>aircompressor</artifactId>
-                <version>0.19</version>
+                <version>0.21</version>
             </dependency>
 
             <dependency>
@@ -972,7 +984,13 @@
             <dependency>
                 <groupId>com.github.ben-manes.caffeine</groupId>
                 <artifactId>caffeine</artifactId>
-                <version>3.0.2</version>
+                <version>3.0.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.oshi</groupId>
+                <artifactId>oshi-core</artifactId>
+                <version>5.8.5</version>
             </dependency>
 
             <dependency>
@@ -1036,7 +1054,7 @@
             <dependency>
                 <groupId>com.linkedin.calcite</groupId>
                 <artifactId>calcite-core</artifactId>
-                <version>1.21.0.146</version>
+                <version>1.21.0.151</version>
                 <classifier>shaded</classifier>
                 <exclusions>
                     <exclusion>
@@ -1223,8 +1241,20 @@
 
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>0.9.0</version>
+                <artifactId>jjwt-api</artifactId>
+                <version>${dep.jsonwebtoken.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${dep.jsonwebtoken.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${dep.jsonwebtoken.version}</version>
             </dependency>
 
             <!-- io.confluent:kafka-avro-serializer uses multiple versions of this transitive dependency -->
@@ -1254,6 +1284,12 @@
             </dependency>
 
             <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13.2</version>
+            </dependency>
+
+            <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.22</version>
@@ -1270,7 +1306,7 @@
                 <!-- org.testcontainers:testcontainer's dependencies pull two different versions of this artifact and this is to negotiate the version -->
                 <groupId>net.java.dev.jna</groupId>
                 <artifactId>jna</artifactId>
-                <version>5.8.0</version>
+                <version>5.10.0</version>
             </dependency>
 
             <dependency>
@@ -1288,7 +1324,7 @@
             <dependency>
                 <groupId>org.alluxio</groupId>
                 <artifactId>alluxio-shaded-client</artifactId>
-                <version>2.4.0</version>
+                <version>2.6.2</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -1324,7 +1360,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
-                <version>1.20</version>
+                <version>1.21</version>
             </dependency>
 
             <dependency>
@@ -1374,7 +1410,13 @@
             <dependency>
                 <groupId>org.checkerframework</groupId>
                 <artifactId>checker-qual</artifactId>
-                <version>3.14.0</version>
+                <version>3.18.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-core</artifactId>
+                <version>7.15.0</version>
             </dependency>
 
             <!-- force newer version to be used for dependencies -->
@@ -1386,15 +1428,9 @@
 
             <dependency>
                 <groupId>org.jdbi</groupId>
-                <artifactId>jdbi</artifactId>
-                <version>2.78</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jdbi</groupId>
                 <artifactId>jdbi3-bom</artifactId>
                 <type>pom</type>
-                <version>3.20.0</version>
+                <version>3.23.0</version>
                 <scope>import</scope>
             </dependency>
 
@@ -1437,7 +1473,7 @@
             <dependency>
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
-                <version>6.2.1</version>
+                <version>9.1</version>
             </dependency>
 
             <dependency>
@@ -1449,7 +1485,7 @@
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
-                <version>42.2.10</version>
+                <version>42.3.1</version>
             </dependency>
 
             <dependency>
@@ -1523,7 +1559,7 @@
             <dependency>
                 <groupId>org.xerial.snappy</groupId>
                 <artifactId>snappy-java</artifactId>
-                <version>1.1.7.3</version>
+                <version>1.1.8.4</version>
             </dependency>
 
             <!-- Transitive dependency. Avoid different versions being used -->
@@ -1691,50 +1727,44 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <!--suppress MavenModelInspection -->
                         <configuration combine.children="merge">
+                            <!-- forking required for JDK 16: https://errorprone.info/docs/installation -->
+                            <fork>true</fork>
                             <compilerArgs>
                                 <arg>-XDcompilePolicy=simple</arg>
-                                <!-- TODO enable more checks, i.e. remove "-XepDisableAllChecks" -->
                                 <arg>
-                                    -Xplugin:ErrorProne
+                                    -Xplugin:ErrorProne \
+                                    <!-- -Xep:ReferenceEquality:OFF fails in IDEA --> \
+                                    <!-- -Xep:BoxedPrimitiveEquality:OFF fails in IDEA --> \
+                                    -Xep:GuardedBy:OFF <!-- needs some careful inspection --> \
+                                    -Xep:BadInstanceof:ERROR \
+                                    -Xep:BoxedPrimitiveConstructor:ERROR \
+                                    -Xep:ClassCanBeStatic:ERROR \
+                                    -Xep:CompareToZero:ERROR \
+                                    -Xep:EqualsIncompatibleType:ERROR \
+                                    -Xep:FallThrough:ERROR \
+                                    -Xep:ImmutableSetForContains:ERROR \
+                                    -Xep:InconsistentHashCode:ERROR \
+                                    -Xep:InjectOnConstructorOfAbstractClass:ERROR \
+                                    -Xep:MissingCasesInEnumSwitch:ERROR \
+                                    -Xep:MissingOverride:ERROR \
+                                    -Xep:NullOptional:ERROR \
+                                    -Xep:ObjectToString:ERROR \
+                                    -Xep:UnnecessaryMethodReference:ERROR \
+                                    -Xep:UnnecessaryOptionalGet:ERROR \
+                                    -Xep:UnusedVariable:ERROR \
+                                    -Xep:UseEnumSwitch:ERROR \
                                     -XepExcludedPaths:.*/target/generated-(|test-)sources/.*
-                                    -XepDisableAllChecks
-                                    -Xep:ArrayEquals:ERROR
-                                    -Xep:ArrayHashCode:ERROR
-                                    -Xep:ArrayToString:ERROR
-                                    -Xep:ArraysAsListPrimitiveArray:ERROR
-                                    -Xep:BadInstanceof:ERROR
-                                    -Xep:BadShiftAmount:ERROR
-                                    -Xep:BoxedPrimitiveConstructor:ERROR
-                                    -Xep:ClassCanBeStatic:ERROR
-                                    -Xep:CompareToZero:ERROR
-                                    -Xep:ComparingThisWithNull:ERROR
-                                    -Xep:EqualsIncompatibleType:ERROR
-                                    -Xep:FallThrough:ERROR
-                                    -Xep:FormatString:ERROR
-                                    -Xep:GetClassOnAnnotation:ERROR
-                                    -Xep:GetClassOnClass:ERROR
-                                    -Xep:IdentityBinaryExpression:ERROR
-                                    -Xep:ImmutableSetForContains:ERROR
-                                    -Xep:InconsistentHashCode:ERROR
-                                    -Xep:InjectOnConstructorOfAbstractClass:ERROR
-                                    -Xep:MissingCasesInEnumSwitch:ERROR
-                                    -Xep:MissingOverride:ERROR
-                                    -Xep:MisusedWeekYear:ERROR
-                                    -Xep:NullOptional:ERROR
-                                    -Xep:ObjectToString:ERROR
-                                    -Xep:OptionalEquality:ERROR
-                                    -Xep:OptionalMapUnusedValue:ERROR
-                                    -Xep:PreconditionsInvalidPlaceholder:ERROR
-                                    -Xep:ReturnValueIgnored:ERROR
-                                    -Xep:StaticQualifiedUsingExpression:ERROR
-                                    -Xep:ThrowIfUncheckedKnownChecked:ERROR
-                                    -Xep:UnnecessaryCheckNotNull:ERROR
-                                    -Xep:UnnecessaryMethodReference:ERROR
-                                    -Xep:UnnecessaryOptionalGet:ERROR
-                                    -Xep:UnusedVariable:ERROR
-                                    -Xep:UseEnumSwitch:ERROR
-                                    -Xep:ZoneIdOfZ:ERROR
                                 </arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                             </compilerArgs>
                             <annotationProcessorPaths>
                                 <path>
